--- a/.classpath
+++ b/.classpath
@@ -4,14 +4,21 @@
   <classpathentry kind="src" path="src/main/resources" excluding="**/*.java"/>
   <classpathentry kind="output" path="target/classes"/>
   <classpathentry kind="var" path="M2_REPO/javax/jms/jms/1.1/jms-1.1.jar"/>
+  <classpathentry kind="var" path="M2_REPO/javax/servlet/jstl/1.1.2/jstl-1.1.2.jar" sourcepath="M2_REPO/javax/servlet/jstl/1.1.2/jstl-1.1.2-sources.jar"/>
   <classpathentry kind="var" path="M2_REPO/javax/transaction/jta/1.0.1B/jta-1.0.1B.jar"/>
   <classpathentry kind="var" path="M2_REPO/javax/servlet/servlet-api/2.5/servlet-api-2.5.jar" sourcepath="M2_REPO/javax/servlet/servlet-api/2.5/servlet-api-2.5-sources.jar"/>
+  <classpathentry kind="var" path="M2_REPO/javax/validation/validation-api/1.0.0.GA/validation-api-1.0.0.GA.jar" sourcepath="M2_REPO/javax/validation/validation-api/1.0.0.GA/validation-api-1.0.0.GA-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/C:/Users/Administrator/.m2/repository/javax/validation/validation-api/1.0.0.GA/validation-api-1.0.0.GA-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
   <classpathentry kind="var" path="M2_REPO/org/apache/activemq/activemq-core/5.7.0/activemq-core-5.7.0.jar" sourcepath="M2_REPO/org/apache/activemq/activemq-core/5.7.0/activemq-core-5.7.0-sources.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/apache/activemq/protobuf/activemq-protobuf/1.1/activemq-protobuf-1.1.jar" sourcepath="M2_REPO/org/apache/activemq/protobuf/activemq-protobuf/1.1/activemq-protobuf-1.1-sources.jar">
     <attributes>
       <attribute value="jar:file:/C:/Users/Administrator/.m2/repository/org/apache/activemq/protobuf/activemq-protobuf/1.1/activemq-protobuf-1.1-javadoc.jar!/" name="javadoc_location"/>
     </attributes>
   </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/com/netease/is/antispam-keyword/2.0.2/antispam-keyword-2.0.2.jar" sourcepath="M2_REPO/com/netease/is/antispam-keyword/2.0.2/antispam-keyword-2.0.2-sources.jar"/>
   <classpathentry kind="var" path="M2_REPO/aopalliance/aopalliance/1.0/aopalliance-1.0.jar" sourcepath="M2_REPO/aopalliance/aopalliance/1.0/aopalliance-1.0-sources.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/aspectj/aspectjrt/1.6.10/aspectjrt-1.6.10.jar" sourcepath="M2_REPO/org/aspectj/aspectjrt/1.6.10/aspectjrt-1.6.10-sources.jar">
     <attributes>
@@ -44,6 +51,7 @@
       <attribute value="jar:file:/C:/Users/Administrator/.m2/repository/commons-dbcp/commons-dbcp/1.3/commons-dbcp-1.3-javadoc.jar!/" name="javadoc_location"/>
     </attributes>
   </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/commons-httpclient/commons-httpclient/3.1/commons-httpclient-3.1.jar" sourcepath="M2_REPO/commons-httpclient/commons-httpclient/3.1/commons-httpclient-3.1-sources.jar"/>
   <classpathentry kind="var" path="M2_REPO/commons-io/commons-io/2.0.1/commons-io-2.0.1.jar"/>
   <classpathentry kind="var" path="M2_REPO/commons-lang/commons-lang/2.6/commons-lang-2.6.jar" sourcepath="M2_REPO/commons-lang/commons-lang/2.6/commons-lang-2.6-sources.jar">
     <attributes>
@@ -144,29 +152,22 @@
     </attributes>
   </classpathentry>
   <classpathentry kind="var" path="M2_REPO/org/apache/activemq/kahadb/5.7.0/kahadb-5.7.0.jar" sourcepath="M2_REPO/org/apache/activemq/kahadb/5.7.0/kahadb-5.7.0-sources.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/apache/thrift/libthrift/0.7.0/libthrift-0.7.0.jar">
-    <attributes>
-      <attribute value="jar:file:/C:/Users/Administrator/.m2/repository/org/apache/thrift/libthrift/0.7.0/libthrift-0.7.0-javadoc.jar!/" name="javadoc_location"/>
-    </attributes>
-  </classpathentry>
   <classpathentry kind="var" path="M2_REPO/log4j/log4j/1.2.16/log4j-1.2.16.jar" sourcepath="M2_REPO/log4j/log4j/1.2.16/log4j-1.2.16-sources.jar">
     <attributes>
       <attribute value="jar:file:/C:/Users/Administrator/.m2/repository/log4j/log4j/1.2.16/log4j-1.2.16-javadoc.jar!/" name="javadoc_location"/>
     </attributes>
   </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/netease/blog/mail_auth/1.0/mail_auth-1.0.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/fusesource/mqtt-client/mqtt-client/1.3/mqtt-client-1.3.jar" sourcepath="M2_REPO/org/fusesource/mqtt-client/mqtt-client/1.3/mqtt-client-1.3-sources.jar"/>
+  <classpathentry kind="var" path="M2_REPO/netease/blog/multi_account_validator/0.6.0/multi_account_validator-0.6.0.jar"/>
   <classpathentry kind="var" path="M2_REPO/mysql/mysql-connector-java/5.1.14/mysql-connector-java-5.1.14.jar"/>
   <classpathentry kind="var" path="M2_REPO/net/sourceforge/nekohtml/nekohtml/1.9.15/nekohtml-1.9.15.jar"/>
   <classpathentry kind="var" path="M2_REPO/com/netease/mylife/netease-base/1.0.12/netease-base-1.0.12.jar"/>
   <classpathentry kind="var" path="M2_REPO/com/netease/framework/netease-circle-dao/1.0.1/netease-circle-dao-1.0.1.jar"/>
   <classpathentry kind="var" path="M2_REPO/com/netease/netease-commons/4.2/netease-commons-4.2.jar"/>
   <classpathentry kind="var" path="M2_REPO/netease/backend/netease-commons/3.3.1/netease-commons-3.3.1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/com/netease/cloud/nos-sdk-java/1.1.1/nos-sdk-java-1.1.1.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/springframework/jms/org.springframework.jms/3.0.4.RELEASE/org.springframework.jms-3.0.4.RELEASE.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/w3c/css/sac/1.3/sac-1.3.jar"/>
-  <classpathentry kind="var" path="M2_REPO/com/netease/backend/sdfs/sdfs-fsi/1.3.3/sdfs-fsi-1.3.3.jar"/>
-  <classpathentry kind="var" path="M2_REPO/com/netease/backend/sdfs/sdfs-photo/1.2/sdfs-photo-1.2.jar"/>
-  <classpathentry kind="var" path="M2_REPO/com/netease/backend/sdfs/sdfs-rpc/1.3.3/sdfs-rpc-1.3.3.jar"/>
   <classpathentry kind="var" path="M2_REPO/xalan/serializer/2.7.1/serializer-2.7.1.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/slf4j/slf4j-api/1.6.1/slf4j-api-1.6.1.jar" sourcepath="M2_REPO/org/slf4j/slf4j-api/1.6.1/slf4j-api-1.6.1-sources.jar">
     <attributes>
@@ -190,9 +191,9 @@
   <classpathentry kind="var" path="M2_REPO/org/springframework/spring-orm/3.1.0.RELEASE/spring-orm-3.1.0.RELEASE.jar" sourcepath="M2_REPO/org/springframework/spring-orm/3.1.0.RELEASE/spring-orm-3.1.0.RELEASE-sources.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/springframework/spring-test/3.1.0.RELEASE/spring-test-3.1.0.RELEASE.jar" sourcepath="M2_REPO/org/springframework/spring-test/3.1.0.RELEASE/spring-test-3.1.0.RELEASE-sources.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/springframework/spring-tx/3.1.0.RELEASE/spring-tx-3.1.0.RELEASE.jar" sourcepath="M2_REPO/org/springframework/spring-tx/3.1.0.RELEASE/spring-tx-3.1.0.RELEASE-sources.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/springframework/spring-web/3.1.0.RELEASE/spring-web-3.1.0.RELEASE.jar" sourcepath="M2_REPO/org/springframework/spring-web/3.1.0.RELEASE/spring-web-3.1.0.RELEASE-sources.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/springframework/spring-webmvc/3.1.0.RELEASE/spring-webmvc-3.1.0.RELEASE.jar" sourcepath="M2_REPO/org/springframework/spring-webmvc/3.1.0.RELEASE/spring-webmvc-3.1.0.RELEASE-sources.jar"/>
   <classpathentry kind="var" path="M2_REPO/net/spy/spy/2.2.44/spy-2.2.44.jar"/>
-  <classpathentry kind="var" path="M2_REPO/com/netease/backend/sdfs/tobie-fsi/1.2.4/tobie-fsi-1.2.4.jar"/>
-  <classpathentry kind="var" path="M2_REPO/ufs-fsi/ufs-fsi/2.0.1/ufs-fsi-2.0.1.jar"/>
   <classpathentry kind="var" path="M2_REPO/xalan/xalan/2.7.1/xalan-2.7.1.jar"/>
   <classpathentry kind="var" path="M2_REPO/xerces/xercesImpl/2.9.1/xercesImpl-2.9.1.jar"/>
   <classpathentry kind="var" path="M2_REPO/xml-apis/xml-apis/1.0.b2/xml-apis-1.0.b2.jar" sourcepath="M2_REPO/xml-apis/xml-apis/1.0.b2/xml-apis-1.0.b2-sources.jar"/>
