--- a/pom.xml
+++ b/pom.xml
@@ -19,8 +19,6 @@
 	<url>http://maven.apache.org</url>
 
 	<dependencies>
-
-
 		<dependency>
 		    <groupId>net.sourceforge.htmlunit</groupId>
 		    <artifactId>htmlunit</artifactId>
@@ -33,6 +31,13 @@
 			<artifactId>guava</artifactId>
 			<version>12.0</version>
 		</dependency>
+
+		<dependency>
+		  <groupId>org.hibernate</groupId>
+		  <artifactId>hibernate-validator-annotation-processor</artifactId>
+		  <version>4.1.0.Final</version>
+		</dependency>
+		
             
 
 
@@ -243,12 +248,6 @@
 			<artifactId>netease-base</artifactId>
 			<version>1.0.12</version>
 		</dependency>
-
-		<dependency>
-			<groupId>netease.ddb</groupId>
-			<artifactId>common</artifactId>
-			<version>4.3.12</version>
-		</dependency>
 		<dependency>
 			<groupId>netease.ddb</groupId>
 			<artifactId>db</artifactId>
@@ -259,16 +258,30 @@
 			<artifactId>db-lw</artifactId>
 			<version>3.3.8</version>
 		</dependency>
+
 		<dependency>
-			<groupId>com.netease.backend.sdfs</groupId>
-			<artifactId>sdfs-fsi</artifactId>
-			<version>1.3.3</version>
+			<groupId>netease.blog</groupId>
+			<artifactId>multi_account_validator</artifactId>
+			<version>0.6.0</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.springframework</groupId>
+					<artifactId>spring</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.springframework</groupId>
+					<artifactId>spring-mock</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
-			<groupId>com.netease.backend.sdfs</groupId>
-			<artifactId>sdfs-rpc</artifactId>
-			<version>1.3.3</version>
+			<groupId>com.netease.is</groupId>
+			<artifactId>antispam-keyword</artifactId>
+			<version>2.0.2</version>
 		</dependency>
+
+
+
 
 		<!-- dao -->
 		<dependency>
@@ -294,6 +307,22 @@
 			<artifactId>jta</artifactId>
 			<version>1.0.1B</version>
 		</dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>servlet-api</artifactId>
+			<version>2.5</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>jstl</artifactId>
+			<version>1.1.2</version>
+		</dependency>
+		<dependency>
+			<groupId>javax.validation</groupId>
+			<artifactId>validation-api</artifactId>
+			<version>1.0.0.GA</version>
+		</dependency>
 
 		<!-- biz -->
 		<dependency>
@@ -304,6 +333,12 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
+			<version>${org.springframework-version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-webmvc</artifactId>
 			<version>${org.springframework-version}</version>
 		</dependency>
 
@@ -343,12 +378,6 @@
 			<artifactId>commons-codec</artifactId>
 			<version>1.5</version>
 		</dependency>
-
-		<dependency>
-			<groupId>com.netease.backend.sdfs</groupId>
-			<artifactId>tobie-fsi</artifactId>
-			<version>1.2.4</version>
-		</dependency>
 		
 		<dependency>
 			<groupId>net.sf.json-lib</groupId>
@@ -367,13 +396,7 @@
             <artifactId>joda-time</artifactId>
             <version>2.1</version>
         </dependency>
-		
-		<dependency>
-			<groupId>com.netease.cloud</groupId>
-			<artifactId>nos-sdk-java</artifactId>
-			<version>1.1.1</version>
-		</dependency>
-
+	
 
 		<dependency>
 		    <groupId>org.apache.activemq</groupId>
