--- a/poms/base-app/pom.xml
+++ b/poms/base-app/pom.xml
@@ -161,6 +161,27 @@
 				</executions>
 			</plugin>
 
+			<plugin>
+				<groupId>org.mortbay.jetty</groupId>
+				<artifactId>maven-jetty-plugin</artifactId>
+				<version>6.1.26</version>
+				<configuration>
+					<!--classesDirectory>${basedir}/target/generated-classes/cobertura</classesDirectory -->
+					<webAppConfig>
+						<contextPath>/</contextPath>
+						<defaultsDescriptor>src/main/resources/webdefault.xml</defaultsDescriptor>
+					</webAppConfig>
+					<stopKey>901edu</stopKey>
+					<stopPort>9999</stopPort>
+					<connectors>
+						<connector implementation="org.mortbay.jetty.nio.SelectChannelConnector">
+							<port>8080</port>
+							<maxIdleTime>60000000</maxIdleTime>
+						</connector>
+					</connectors>
+				</configuration>
+			</plugin>	
+
 
 
 		</plugins>
