--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,14 @@
 	<url>http://maven.apache.org</url>
 
 	<dependencies>
+
+
+			<dependency>
+			    <groupId>org.apache.mina</groupId>
+			    <artifactId>mina-core</artifactId>
+			    <version>2.0.7</version>
+			</dependency>
+
 		<dependency>
 		    <groupId>net.sourceforge.htmlunit</groupId>
 		    <artifactId>htmlunit</artifactId>
