--- a/pom.xml
+++ b/pom.xml
@@ -267,6 +267,11 @@
 			<version>3.3.8</version>
 		</dependency>
 
+
+
+            
+
+
 		<dependency>
 			<groupId>netease.blog</groupId>
 			<artifactId>multi_account_validator</artifactId>
@@ -338,6 +343,24 @@
 			<artifactId>spring-core</artifactId>
 			<version>${org.springframework-version}</version>
 		</dependency>
+		<dependency>
+		    <groupId>org.apache.mina</groupId>
+		    <artifactId>mina-integration-spring</artifactId>
+		    <version>1.1.7</version>
+			<exclusions>
+        		<exclusion>  <!-- declare the exclusion here -->
+					  <groupId>org.springframework</groupId>
+    				 <artifactId>spring-beans</artifactId>
+        		</exclusion>
+
+        		<exclusion>  <!-- declare the exclusion here -->
+					<groupId>log4j</groupId>
+					<artifactId>log4j</artifactId>
+        		</exclusion>
+     		 </exclusions> 
+
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
