add extinfo for fast-join

--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,6 +1,6 @@
 # DataSource 1,using ddb for deploy
-mysql.url=jdbc:mysql://127.0.0.1:3306/wordpress
-mysql.user=chq
+mysql.url=jdbc:mysql://198.100.99.235:3306/wordpress
+mysql.user=chq_test
 mysql.pass=chq$1234
 
 
