--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,5 +1,5 @@
 # DataSource 1,using ddb for deploy
-mysql.url=jdbc:mysql://198.100.99.235:3306/wordpress
+mysql.url=jdbc:mysql://198.100.99.235:3306/bomb
 mysql.user=chq_test
 mysql.pass=chq$1234
 
