parse exception log

--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,7 +1,7 @@
 # DataSource 1,using ddb for deploy
-mysql.url=jdbc:mysql://198.100.99.235:3306/bomb
-mysql.user=chq_test
-mysql.pass=chq$1234
+mysql.url=jdbc:mysql://127.0.0.1:3306/bomb
+mysql.user=bomb_online
+mysql.pass=bomb_online1234
 
 
 
