--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,7 @@
 		</dependency>
 		
             
+		
 
 
 
@@ -409,7 +410,7 @@
 			<artifactId>commons-codec</artifactId>
 			<version>1.5</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>net.sf.json-lib</groupId>
 			<artifactId>json-lib</artifactId>
@@ -417,16 +418,22 @@
 		</dependency>
 		
 		<dependency>
-            <groupId>org.codehaus.jackson</groupId>
-            <artifactId>jackson-core-asl</artifactId>
-            <version>1.8.7</version>
-        </dependency>
-		
+			<groupId>org.codehaus</groupId>
+			<artifactId>jackson-all</artifactId>
+			<version>1.9.0</version>
+		</dependency>
+
 		<dependency>
-            <groupId>joda-time</groupId>
-            <artifactId>joda-time</artifactId>
-            <version>2.1</version>
-        </dependency>
+			<groupId>org.codehaus.jackson</groupId>
+			<artifactId>jackson-core-asl</artifactId>
+			<version>1.8.7</version>
+		</dependency>
+
+		<dependency>
+			<groupId>joda-time</groupId>
+			<artifactId>joda-time</artifactId>
+			<version>2.1</version>
+		</dependency>
 	
 
 		<dependency>
