--- a/src/test/resources/test.properties
+++ b/src/test/resources/test.properties
@@ -5,9 +5,9 @@ host=198.100.99.235
 uploadPlayerInfo={"action":"uploadPlayerInfo","playerInfo":{"in_use":{"medalInUse1":"0" , "medalInUse3":"2" , "medalInUse2":"3" , "itemInUse1":"0","itemInUse2":"0","itemInUse3":"0"},"nickname":"bigbang3"}}
 login={"action":"login", "username":"A", "password":"abc"}
 logout={"action":"logout", "username":"A"}
-signup={"action":"signup", "username":"x", "nickname":"xxx","password":"abc"}
+signup={"action":"signup", "username":"x", "nickname":"x3","password":"abc"}
 game-start={"action":"game-start"}
-fast-join={"action":"fast-join","playersNum":"2","timeoutInSeconds":60}
+fast-join={"action":"fast-join","playersNum":"2","timeoutInSeconds":6}
 forward={"action":"forward", "friendList":["a", "b", "c"], "data":"this is binary data"}
 downloadPlayerInfo={"action":"downloadPlayerInfo"}
 #not implement
