--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -2,8 +2,10 @@
 mysql.url=jdbc:mysql://127.0.0.1:3306/bomb
 mysql.user=bomb_online
 mysql.pass=bomb_online1234
-
-
+mysql.initialSize=50
+mysql.maxIdle=30
+mysql.minIdle=10
+mysql.maxActive=300
 
 
 
