--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,14 @@
 		    <artifactId>htmlunit</artifactId>
 		    <version>2.9</version>
 		</dependency>
+
+
+		<dependency>
+			<groupId>org.codehaus.jettison</groupId>
+			<artifactId>jettison</artifactId>
+			<version>1.3.2</version>
+		</dependency>
+
 	
 
 		<dependency>
