1. 接受和发送日志增加统计字符数 2. level根据胜利数变更

--- a/src/test/resources/test.properties
+++ b/src/test/resources/test.properties
@@ -5,7 +5,7 @@ host=198.100.99.235
 uploadPlayerInfo={"action":"uploadPlayerInfo","playerInfo":{"in_use":{"medalInUse1":"0" , "medalInUse3":"2" , "medalInUse2":"3" , "itemInUse1":"0","itemInUse2":"0","itemInUse3":"0"},"nickname":"bigbang3"}}
 login={"action":"login", "username":"A", "password":"abc"}
 logout={"action":"logout", "username":"A"}
-signup={"action":"signup", "username":"gotixxt", "nickname":"x3","password":"abc"}
+signup={"action":"signup", "username":"gotixxxxxt", "nickname":"xxxx3","password":"abc"}
 game-start={"action":"game-start"}
 fast-join={"action":"fast-join","playersNum":"2","timeoutInSeconds":60}
 forward={"action":"forward", "friendList":["a", "b", "c"], "data":"this is binary data"}
