--- a/src/test/resources/test.properties
+++ b/src/test/resources/test.properties
@@ -21,6 +21,7 @@ downloadMedals={"action":"downloadMedals"}
 uploadMedals={"action":"uploadMedals","medal":"100"}
 uploadMedals={"action":"uploadMedals","medal":"100"}
 receiptData={"data":"xxxx","action":"receiptData"}
+getOnlineUserList={"action":"getOnlineUserList"}
 
 
 
