--- a/pom.xml
+++ b/pom.xml
@@ -21,16 +21,23 @@
 	<dependencies>
 
 
-			<dependency>
-			    <groupId>org.apache.mina</groupId>
-			    <artifactId>mina-core</artifactId>
-			    <version>2.0.7</version>
-			</dependency>
+		<dependency>
+			<groupId>com.belerweb</groupId>
+			<artifactId>weibo4j-oauth2</artifactId>
+			<version>2.1.1-beta2</version>
+		</dependency>
+
 
 		<dependency>
-		    <groupId>net.sourceforge.htmlunit</groupId>
-		    <artifactId>htmlunit</artifactId>
-		    <version>2.9</version>
+			<groupId>org.apache.mina</groupId>
+			<artifactId>mina-core</artifactId>
+			<version>2.0.7</version>
+		</dependency>
+
+		<dependency>
+			<groupId>net.sourceforge.htmlunit</groupId>
+			<artifactId>htmlunit</artifactId>
+			<version>2.9</version>
 		</dependency>
 
 
@@ -40,7 +47,7 @@
 			<version>1.3.2</version>
 		</dependency>
 
-	
+
 
 		<dependency>
 			<groupId>com.google.guava</groupId>
@@ -49,23 +56,23 @@
 		</dependency>
 
 		<dependency>
-		  <groupId>org.hibernate</groupId>
-		  <artifactId>hibernate-validator-annotation-processor</artifactId>
-		  <version>4.1.0.Final</version>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-validator-annotation-processor</artifactId>
+			<version>4.1.0.Final</version>
 		</dependency>
-		
-            
-		
+
+
+
 
 
 
 		<dependency>
-		<groupId>org.apache.httpcomponents</groupId>
-		<artifactId>httpmime</artifactId>
-		<version>4.2.3</version>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpmime</artifactId>
+			<version>4.2.3</version>
 		</dependency>
 
-			<!-- json -->
+		<!-- json -->
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
@@ -73,10 +80,10 @@
 		</dependency>
 
 		<dependency>
-		<!-- jsoup HTML parser library @ http://jsoup.org/ -->
-		<groupId>org.jsoup</groupId>
-		<artifactId>jsoup</artifactId>
-		<version>1.6.3</version>
+			<!-- jsoup HTML parser library @ http://jsoup.org/ -->
+			<groupId>org.jsoup</groupId>
+			<artifactId>jsoup</artifactId>
+			<version>1.6.3</version>
 		</dependency>
 
 
@@ -278,7 +285,7 @@
 
 
 
-            
+
 
 
 		<dependency>
@@ -353,20 +360,20 @@
 			<version>${org.springframework-version}</version>
 		</dependency>
 		<dependency>
-		    <groupId>org.apache.mina</groupId>
-		    <artifactId>mina-integration-spring</artifactId>
-		    <version>1.1.7</version>
+			<groupId>org.apache.mina</groupId>
+			<artifactId>mina-integration-spring</artifactId>
+			<version>1.1.7</version>
 			<exclusions>
-        		<exclusion>  <!-- declare the exclusion here -->
-					  <groupId>org.springframework</groupId>
-    				 <artifactId>spring-beans</artifactId>
-        		</exclusion>
+				<exclusion>  <!-- declare the exclusion here -->
+					<groupId>org.springframework</groupId>
+					<artifactId>spring-beans</artifactId>
+				</exclusion>
 
-        		<exclusion>  <!-- declare the exclusion here -->
+				<exclusion>  <!-- declare the exclusion here -->
 					<groupId>log4j</groupId>
 					<artifactId>log4j</artifactId>
-        		</exclusion>
-     		 </exclusions> 
+				</exclusion>
+			</exclusions> 
 
 		</dependency>
 
@@ -424,7 +431,7 @@
 			<artifactId>json-lib</artifactId>
 			<version>2.3</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.codehaus</groupId>
 			<artifactId>jackson-all</artifactId>
@@ -442,12 +449,12 @@
 			<artifactId>joda-time</artifactId>
 			<version>2.1</version>
 		</dependency>
-	
+
 
 		<dependency>
-		    <groupId>org.apache.activemq</groupId>
-		    <artifactId>activemq-core</artifactId>
-		    <version>5.7.0</version>
+			<groupId>org.apache.activemq</groupId>
+			<artifactId>activemq-core</artifactId>
+			<version>5.7.0</version>
 		</dependency>
 		<dependency>
 			<groupId>javax.jms</groupId>
@@ -455,9 +462,9 @@
 			<version>1.1</version>
 		</dependency>
 		<dependency>
-		    <groupId>org.springframework.jms</groupId>
-		    <artifactId>org.springframework.jms</artifactId>
-		    <version>3.0.4.RELEASE</version>
+			<groupId>org.springframework.jms</groupId>
+			<artifactId>org.springframework.jms</artifactId>
+			<version>3.0.4.RELEASE</version>
 		</dependency>
 	</dependencies>
 
