dev 使用username引起的问题

--- a/src/test/resources/test.properties
+++ b/src/test/resources/test.properties
@@ -4,9 +4,9 @@ host=198.100.99.235
 #client->server
 uploadPlayerInfo={"action":"uploadPlayerInfo","playerInfo":{"in_use":{"medalInUse1":"0" , "medalInUse3":"2" , "medalInUse2":"3" , "itemInUse1":"0","itemInUse2":"0","itemInUse3":"0"},"nickname":"bigbang3"}}
 login={"action":"login", "username":"AD8CFAB103BC415D8D072541016C9564", "password":"123456"}
-login={"action":"sso_login", "type":"weibo","data":{"token":"xxxx"}}
+login={"action":"sinalogin", "type":"weibo","data":{"token":"xxsssssxx"}}
 logout={"action":"logout", "username":"A"}
-signup={"action":"signup", "username":"gotixxxxxt", "nickname":"xxxx3","password":"abc"}
+signup={"action":"signup", "username":"taotailang", "nickname":"taotailang","password":"abc"}
 game-start={"action":"game-start"}
 fast-join={"action":"fast-join","playersNum":"2","timeoutInSeconds":60}
 forward={"action":"forward", "friendList":["a", "b", "c"], "data":"this is binary data"}
