dev 数据转发的问题

--- a/src/test/resources/test.properties
+++ b/src/test/resources/test.properties
@@ -6,9 +6,9 @@ uploadPlayerInfo={"action":"uploadPlayerInfo","playerInfo":{"in_use":{"medalInUs
 login={"action":"login", "username":"AD8CFAB103BC415D8D072541016C9564", "password":"123456"}
 login={"action":"sinalogin", "type":"weibo","data":{"token":"xxsssssxx"}}
 logout={"action":"logout", "username":"A"}
-signup={"action":"signup", "username":"taotailang", "nickname":"taotailang","password":"abc"}
+signup={"action":"signup", "username":"taotailang2", "nickname":"taotailang2","password":"abc"}
 game-start={"action":"game-start"}
-fast-join={"action":"fast-join","playersNum":"2","timeoutInSeconds":60}
+fast-join={"action":"fast-join","playersNum":"2","timeoutInSeconds":600}
 forward={"action":"forward", "friendList":["a", "b", "c"], "data":"this is binary data"}
 downloadPlayerInfo={"action":"downloadPlayerInfo"}
 #not implement
@@ -23,6 +23,8 @@ uploadMedals={"action":"uploadMedals","medal":"100"}
 uploadMedals={"action":"uploadMedals","medal":"100"}
 receiptData={"data":"xxxx","action":"receiptData"}
 getOnlineUserList={"action":"getOnlineUserList"}
+
+exchangeCoinToHeart={"action":"exchangeCoinToHeart", "gold":20}
 
 
 
