--- a/src/test/resources/test.properties
+++ b/src/test/resources/test.properties
@@ -23,8 +23,8 @@ uploadMedals={"action":"uploadMedals","medal":"100"}
 uploadMedals={"action":"uploadMedals","medal":"100"}
 receiptData={"data":"xxxx","action":"receiptData"}
 getOnlineUserList={"action":"getOnlineUserList"}
-
-exchangeCoinToHeart={"action":"exchangeCoinToHeart", "gold":30}
+everydayAward={"action":"everydayAward"}
+everydayAward={"action":"everydayAward","code":200,"gold":5,"heart":5,"days":7}
 
 
 
