--- a/pom.xml
+++ b/pom.xml
@@ -139,7 +139,12 @@
 			<artifactId>dom4j</artifactId>
 			<version>1.6</version>
 		</dependency>
-
+		<dependency>
+			    <groupId>oauth.signpost</groupId>
+			        <artifactId>signpost-core</artifactId>
+				<version>1.2.1.1</version>
+			</dependency>
+		
 		<dependency>
 			<groupId>jaxen</groupId>
 			<artifactId>jaxen</artifactId>
